fix(release): run goreleaser within release-please and support tag backfills
## Root cause

Release Please created tags/releases using the workflow GITHUB_TOKEN. Those tag events did not trigger the separate tag-push Release workflow, so no binaries were attached and no Homebrew formula updates were published.

## What changed

- update .github/workflows/release-please.yml:
  - add step id for release-please action
  - run checkout, tag fetch, Go setup, and GoReleaser when releases_created is true
  - add workflow_dispatch trigger for manual runs
- update .github/workflows/release.yml:
  - add workflow_dispatch with optional tag input
  - resolve checkout ref to support manual reruns against existing tags
- update README release flow to document that GoReleaser runs from the Release Please workflow when a release is created

## Why this fixes the issue

Publishing now happens in the same workflow that creates the release, so it no longer depends on a secondary tag-triggered workflow event.

Manual backfill support allows releasing existing tags (such as v0.2.0) on demand.

## Validation performed

- verified workflow definitions are syntactically valid YAML
- confirmed release-please outputs gate the GoReleaser steps
- verified modified files via git diff and status

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -14,7 +15,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run release-please
+        id: release
         uses: googleapis/release-please-action@v4
         with:
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
+
+      - name: Checkout
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Fetch tags
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
+        run: git fetch --force --tags
+
+      - name: Setup Go
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Run GoReleaser
+        if: ${{ steps.release.outputs.releases_created == 'true' }}
+        uses: goreleaser/goreleaser-action@v6
+        with:
+          distribution: goreleaser
+          version: "~> v2"
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
